/////////////////////////////////////////////////////////////
// Generated by the VisualData modelbuilder.  DO NOT EDIT!
/////////////////////////////////////////////////////////////
syntax = "proto3";
package OpenNGS.Setting.Data;

import "OpenNGS.Core.proto";
import "OpenNGS.Setting.Common.proto";

//设置标签
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
message GameSettingLabel{
	uint32 ID = 1;  //ID
	OpenNGS.Core.NGSText Name = 2;  //设置标签
	OpenNGS.Core.NGSText UIName = 3;  //UI名称
}
message GameSettingLabelArray{
	repeated GameSettingLabel items = 1;
}

//设置响应
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
message GetSettingRsq{
	OpenNGS.Setting.Common.RESULT_TYPE Result = 1;  //请求结果
	OpenNGS.Setting.Data.VerticalSynchronization Vertical = 2;  //画面
	OpenNGS.Setting.Data.AudioSettingInfo Audio = 3;  //音频
	OpenNGS.Setting.Data.KeyControlSettingInfo KeyControl = 4;  //按键
	OpenNGS.Setting.Data.Language Languages = 5;  //语言
	OpenNGS.Setting.Data.ResolutionRatios ScreenView = 6;  //分辨率
}
message GetSettingRsqArray{
	repeated GetSettingRsq items = 1;
}

//画面
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
message VerticalSynchronization{
	uint32 ID = 1;  //ID
	OpenNGS.Core.NGSText VerName = 2;  //画面类型
	bool state = 3;  //状态
}
message VerticalSynchronizationArray{
	repeated VerticalSynchronization items = 1;
}

//音频
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
message AudioSettingInfo{
	uint32 ID = 1;  //ID
	OpenNGS.Core.NGSText AduioName = 2;  //音频名称
	OpenNGS.Setting.Common.ADUIO_TYPE AduioType = 3;  //音频类型
	uint32 Value = 4;  //数值
	bool Switch = 5;  //开关
}
message AudioSettingInfoArray{
	repeated AudioSettingInfo items = 1;
}

//按键
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
message KeyControlSettingInfo{
	uint32 ID = 1;  //ID
	OpenNGS.Core.NGSText KeyName = 2;  //按键类型
	string Key = 3;  //键值
}
message KeyControlSettingInfoArray{
	repeated KeyControlSettingInfo items = 1;
}

//语言
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
message Language{
	uint32 ID = 1;  //ID
	OpenNGS.Core.NGSText languageName = 2;  //语言名称
	OpenNGS.Setting.Common.LANGUAGE_TYPE languageType = 3;  //语言类型
	bool Default = 4;  //状态
}
message LanguageArray{
	repeated Language items = 1;
}

//分辨率
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
message ResolutionRatios{
	uint32 ID = 1;  //ID
	OpenNGS.Core.NGSText ResName = 2;  //分辨率
	string ResValue = 3;  //分辨率值
}
message ResolutionRatiosArray{
	repeated ResolutionRatios items = 1;
}

//设置存档数据
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
message SettingContainer{
	OpenNGS.Setting.Data.VerticalSynchronizationData Vertical = 1;  //画面
	repeated OpenNGS.Setting.Data.AudioSettingData Audio = 2;  //音频
	repeated OpenNGS.Setting.Data.KeyControlSettingData KeyControl = 3;  //按键
	OpenNGS.Setting.Data.LanguageData Language = 4;  //语言
	OpenNGS.Setting.Data.ResolutionRatiosData ResolutionRatios = 5;  //分辨率
}
message SettingContainerArray{
	repeated SettingContainer items = 1;
}

//画面存档结构
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
message VerticalSynchronizationData{
	string VerName = 1;  //名字
	bool State = 2;  //状态
}
message VerticalSynchronizationDataArray{
	repeated VerticalSynchronizationData items = 1;
}

//音频存档结构
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
message AudioSettingData{
	string AudioName = 1;  //名字
	string Value = 2;  //数值
	bool Start = 3;  //状态
}
message AudioSettingDataArray{
	repeated AudioSettingData items = 1;
}

//控制存档结构
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
message KeyControlSettingData{
	string KeyName = 1;  //键名
	string KeyValue = 2;  //键值
}
message KeyControlSettingDataArray{
	repeated KeyControlSettingData items = 1;
}

//语言存档结构
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
message LanguageData{
	string LanName = 1;  //语言名称
	bool Start = 2;  //状态
}
message LanguageDataArray{
	repeated LanguageData items = 1;
}

//分辨率存档结构
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
message ResolutionRatiosData{
	string ResName = 1;  //名称
	uint32 ResValue = 2;  //数值
}
message ResolutionRatiosDataArray{
	repeated ResolutionRatiosData items = 1;
}
