/////////////////////////////////////////////////////////////
// Generated by the VisualData modelbuilder.  DO NOT EDIT!
/////////////////////////////////////////////////////////////
syntax = "proto3";
package OpenNGS.Setting.Common;


//分辨率
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
enum RESOLUTIONRATION_TYPE{
	RESOLUTIONRATION_TYPE_PROGRESSIVE = 0;  //1920*1080
}

//语言
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
enum LANGUAGE_TYPE{
	LANGUAGE_TYPE_ZH = 0;  //简体中文
	LANGUAGE_TYPE_HK = 1;  //繁体中文
	LANGUAGE_TYPE_US = 2;  //ENGLISH
	LANGUAGE_TYPE_JM = 3;  //日本语
}

//结果类型
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
enum RESULT_TYPE{
	RESULT_TYPE_NONE = 0;  //无
	RESULT_TYPE_SUCCESS = 1;  //成功
	RESULT_TYPE_FAILED = 2;  //失败
}

//音频类型
//Data\Entities\OpenNGS\OpenNGS.Setting.xlsx
enum ADUIO_TYPE{
	ADUIO_TYPE_OVERALLAudio = 0;  //整体音效
	ADUIO_TYPE_SOUND = 1;  //音效
	ADUIO_TYPE_MUSIC = 2;  //音乐
}
